# ArbitraryPrecision

./: .gitignore  ArbitraryPrecision.cpp  ArbitraryPrecision.h  ArbitraryPrecisionFloat.cpp  ArbitraryPrecisionFloat.h  ArbitraryPrecisionInt.cpp  ArbitraryPrecisionInt.h  CMakeLists.txt  LICENSE  README.md  Reference.md  Theory.md  build.sh  main.cpp
src/: APfloat.cpp  APfloat.h  APint.cpp  APint.h  ArbitraryPrecisionFloat.cpp  ArbitraryPrecisionFloat.h  ArbitraryPrecisionInt.cpp  ArbitraryPrecisionInt.h  main.cpp
test/: APfloat_test.cpp  APint_test.cpp  ArbitraryPrecisionFloat_test.cpp  ArbitraryPrecisionInt_test.cpp  main_test.cpp  test_utils.cpp  test_utils.h
